fix headers being jumpy (hopefully), closes #2

--- a/src/css/sections/_clients.scss
+++ b/src/css/sections/_clients.scss
@@ -8,6 +8,11 @@
 		width: 25%;
 		margin: 0 0 120px;
 		background-position: center;
-		text-align: center;
+	}
+	img {
+		display: block;
+		width: 181px;
+		height: 91px;
+		margin: 0 auto;
 	}
 }
